.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0.3 - Unreleased
------------------

- Fixed errors on kss update in portal factory.
  This fixes https://dev.plone.org/plone/ticket/11311.
  [thomasdesvenain]

- In the registration tool strip the mail text before passing it
  through message_from_string.  A leading white line would prevent
  getting Subject, To and From headers from the generated message.
  [maurits]

- Avoid various deprecation warnings under Zope 2.13.
  [hannosch]

4.0.2 - 2010-11-15
------------------

- Added fill-slot to events_listing.pt that was not showing any events.
  This fixes http://dev.plone.org/plone/ticket/11216.
  [jmansilla, WouterVH]

- Fixed ``factory.addPloneSite`` so extension profiles have a chance of
  specifying site properties in a ``properties.xml`` file.
  [hannosch]

- Edit tab on Author page pointed to personal preferences page instead of
  personal information.
  This fixes http://dev.plone.org/plone/ticket/11141.
  [piv]

- Fixed http://dev.plone.org/plone/ticket/11160,
  first level of Table of Contents is a level with at least two entries.
  [thomasdesvenain]

- Fixed: http://dev.plone.org/plone/ticket/11177, some formselector
  specifications for popups were too vague.
  [smcmahon]

- Fixed: http://dev.plone.org/plone/ticket/11187, Better message when
  you cannot delete a locked item
  [kiorky]

4.0.1 - 2010-09-28
-------------------

- Fixed : 'listing' class table sort of first column failed (at third click).
  [thomasdesvenain]

- Re-add suggestions for 404 pages that were missing in 4.0.
  [MatthewWilkes]

- Block picking a username already in use by a parent PAS to prevent potential
  security issues due to collisions.
  [MatthewWilkes]

- Successful completion of contact form ended in redirect to 'undefined'
  when using popups. Fixed by just closing.